--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -231,11 +231,12 @@
                                 <input type="checkbox" aria-labelledby="remember-me-text" />
                                 <span class="checkmark"></span>
                             </label>
-                            <label id="guest" class="check">
-                                <div id="guest-text">Play as a guest</div>
-                                <input type="checkbox" aria-labelledby="guest-text" />
-                                <span class="checkmark"></span>
-                            </label>
+                            
+                            //<label id="guest" class="check">
+                            //    <div id="guest-text">Play as a guest</div>
+                            //    <input type="checkbox" aria-labelledby="guest-text" />
+                            //    <span class="checkmark"></span>
+                            //</label>
 
                             <button
                                 title="Login"
