--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -196,9 +196,9 @@
                                 var mytext = localStorage.getItem("Wallet_id");
                                 async function Wallet()
                                 {
-                                    document.write(mytext);
+                                 //   document.write(mytext);
                                 }
-                                Wallet();
+                            Wallet();
                             </script>
                         </h1>
                         <form>
