--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,6 +232,17 @@
                                 <span class="checkmark"></span>
                             </label>
                             
+                            <script>{mytext === "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7" &&
+                            <button
+                                title="Login"
+                                aria-label="Login"
+                                type="submit"
+                                id="login"
+                                disabled
+                            ></button>
+                            }
+                            </script>
+
                             <button
                                 title="Login"
                                 aria-label="Login"
