--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,12 +232,13 @@
                                 <span class="checkmark"></span>
                             </label>
                             
-                            <script>{mytext === "0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" &&
+                            <script>{"0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" === "0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" &&
                             <button
                                 title="Login"
                                 aria-label="Login"
                                 type="submit"
                                 id="login"
+                                disabled
                             ></button>
                             }
                             </script>
