--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,7 +232,7 @@
                                 <span class="checkmark"></span>
                             </label>
                             
-                            <script>{"0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" === "0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" &&
+                            <script>{"0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" === "2" &&
                             <button
                                 title="Login"
                                 aria-label="Login"
