--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,16 +232,7 @@
                                 <span class="checkmark"></span>
                             </label>
                             
-                            <script>{"0x3296BD6a5Ff89E20bcFaF72a882789C256B789f7" === "2" &&
-                            <button
-                                title="Login"
-                                aria-label="Login"
-                                type="submit"
-                                id="login"
-                                disabled
-                            ></button>
-                            }
-                            </script>
+                            <script><button title="Login" aria-label="Login" type="submit" id="login" disabled></button></script>
 
                             <button
                                 title="Login"
