--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,7 +232,7 @@
                                 <span class="checkmark"></span>
                             </label>
                             
-                            <script><button title="Login" aria-label="Login" type="submit" id="login" disabled></button></script>
+                            <button title="Login" aria-label="Login" type="submit" id="login" disabled></button>
 
                             <button
                                 title="Login"
