--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -232,8 +232,10 @@
                                 <span class="checkmark"></span>
                             </label>
                             
+                            <div>
                             <button title="Login" aria-label="Login" type="submit" id="login" disabled></button>
-
+                            </div>
+                            
                             <button
                                 title="Login"
                                 aria-label="Login"
