--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -233,7 +233,7 @@
                             </label>
                             
                             <div>
-                            <button title="Login1" aria-label="Login" type="submit" id="login1" disabled></button>
+                            <button onClick={mint}>BUY one Space Moon Ape NFT</button>
                             </div>
                             
                             <button
