--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -233,7 +233,12 @@
                             </label>
                             
                             <div>
-                            <button onClick={mint}>BUY one Space Moon Ape NFT</button>
+                                <p id="demo">Good Evening!</p>
+                                <script>
+                                if (mytext == "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7") {
+                                document.getElementById("demo").innerHTML = "Good day!";
+                                }
+                                </script>
                             </div>
                             
                             <button
