--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -233,10 +233,10 @@
                             </label>
                             
                             <div>
-                                <p id="demo">Good Evening!</p>
+                                <p id="demo">MERDE!</p>
                                 <script>
-                                if ("0x3296bd6a5ff89e20bcfaf72a882789c256b789f7" === "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7") {
-                                document.getElementById("demo").innerHTML = "Good day!";
+                                if (mytext === "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7") {
+                                document.getElementById("demo").innerHTML = "SUPER!";
                                 }
                                 </script>
                             </div>
