--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -236,11 +236,11 @@
                                 <p id="demo">MERDE!</p>
                                 <script>
                                 if (mytext === "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7") {
-                                document.getElementById("demo").innerHTML = "SUPER!";
+                                document.getElementById("demo").innerHTML = "<button title="Login" aria-label="Login" type="submit" id="login" disabled></button>";
                                 }
                                 </script>
                             </div>
-                            
+
                             <button
                                 title="Login"
                                 aria-label="Login"
