--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -233,11 +233,19 @@
                             </label>
                             
                             <div>
-                                <p id="demo">MERDE!</p>
+                                <input type="button" id="toggler" value="Toggler" onClick="action();" />
+                                <input type="button" id="togglee" value="Togglee" />
+                                
                                 <script>
-                                if (mytext === "0x3296bd6a5ff89e20bcfaf72a882789c256b789f7") {
-                                document.getElementById("demo").innerHTML = "<button title="Login" aria-label="Login" type="submit" id="login" disabled></button>";
-                                }
+                                    var hidden = false;
+                                    function action() {
+                                        hidden = !hidden;
+                                        if(hidden) {
+                                            document.getElementById('togglee').style.visibility = 'hidden';
+                                        } else {
+                                            document.getElementById('togglee').style.visibility = 'visible';
+                                        }
+                                    }
                                 </script>
                             </div>
 
